# space-deck-builder

./: .gitignore  README.md  agents.md  hello.py  pyproject.toml
.github/: copilot-instructions.md
analysis/: architecture_visual.html  dashboard_test_dashboard.html
analysis/elo_hp3_20260417_220133/: tournament_dashboard.html
data/: cards.csv
docs/: eval_protocol.md
docs/decisions/: 0001-drop-multistream-inference.md
logs/: run_training.ps1  training_profile.prof
notebooks/: episodes_analyzer.ipynb  memory_analysis.ipynb  ppo_analyzer.ipynb
results/: ablation_elo_pairings.txt  attention_ablation.md  baseline_v3.md  capacity_probe.md  curriculum_v02.md  token_features_phase1.md
scripts/: README.md  analyze_plateau.py  analyze_pyspy.py  bench_token_path.py  benchmark.py  chunked_resume.ps1  compare_metrics.py  compare_runs.py  device_benchmark.py  gen_arch_visual.py  hp3_full_resume.ps1  hp_sweep_attn.ps1  overnight_master.ps1  overnight_sweep.ps1  probe_checkpoints.py  profile_training.py  run_pool_comparison.ps1  setup_gpu.py
simulator/: README.md  pyproject.toml  requirements.txt
simulator/data/: cards.csv
simulator/examples/: ai_tournament.py  pygame_example.py  simple_game.py
simulator/src/ai/: agent.py  human_agent.py  random_agent.py  strategies.py
simulator/src/cards/: card.py  effects.py  effects_parser.py  loader.py
simulator/src/engine/: actions.py  aggregate_stats.py  card_effects.py  game.py  game_stats.py  player.py  turn.py
simulator/src/ui/: cli.py  game_state.py  pygame_ui.py
simulator/src/utils/: constants.py  logger.py
simulator/tests/: test_ai.py  test_cards.py  test_engine.py
src/: __main__.py  config.py  simulate_games.py
src/ai/: agent.py  heuristic_agent.py  human_agent.py  neural_agent.py  ppo_agent.py  random_agent.py  simple_agent.py
src/analysis/: action_analyzer.py  analyzer.py  dashboard.py  memory_analyzer.py  memory_loader.py  replay_collector.py  visualization.py
src/cards/: card.py  effects.py  effects_parser.py  factions.py  loader.py  registry.py
src/encoding/: action_context.py  action_encoder.py  game_tensor.py  state_encoder.py  state_utils.py
src/engine/: actions.py  aggregate_stats.py  game.py  game_stats.py  player.py  rules.py
src/nn/: action_encoder.py  experience.py  memory_data.py  parallel_worker.py  ppo_trainer.py  save_probability.py  state_encoder.py  trainer.py
src/ppo/: batch_runner.py  elo_tournament.py  mp_batch_runner.py  mp_inference_server.py  mp_sim_worker.py  opponent_pool.py  policy_evaluator.py  ppo_actor_critic.py  ppo_eval.py  ppo_simulate.py  ppo_trainer.py  rollout_buffer.py  train_logger.py
src/ui/: cli.py  pygame_ui.py
src/utils/: decay_rate_calculator.py  logger.py
tests/: test_action_context.py  test_attention_pool.py  test_card_clone.py  test_elo_tournament.py  test_engine_rules.py  test_game_tensor.py  test_lr_schedule.py  test_mp_inference_server.py  test_opponent_pool.py  test_ppo_eval.py  test_registry.py  test_replay_analysis.py  test_resume.py  test_self_play_schedule.py  test_state_encoder.py  test_token_features.py  test_train_cli_defaults.py  test_train_logger.py
