[project]
name = "space-deck-builder-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pygame>=2.6.1",
    "torch>=2.6.0",
]

[tool.uv.sources]
torch = [
  { index = "therock-gfx120x", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "therock-gfx120x"
url = "https://rocm.nightlies.amd.com/v2/gfx120X-all/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
