[project]
name = "space-deck-builder-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pygame>=2.6.1",
    "torch>=2.6.0",
]

## GPU-specific torch indexes (used by scripts/setup_gpu.py, not auto-selected)

[tool.pytest.ini_options]
pythonpath = ["."]
[[tool.uv.index]]
name = "therock-gfx120x"
url = "https://rocm.nightlies.amd.com/v2/gfx120X-all/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
