[project]
name = "space-deck-builder-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
cuda = [
    "torch>=2.6.0",
    "triton>=3.0.0 ; sys_platform == 'linux'",
]
rocm = [
    "torch>=2.6.0",
    "rocm",
    "rocm-sdk-core",
    "rocm-sdk-libraries-gfx120x-all",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "therock-gfx120x", extra = "rocm" },
    { index = "pytorch-cu128", extra = "cuda" },
]
triton = [
    { index = "pytorch-cu128", extra = "cuda" },
]
rocm = [
    { index = "therock-gfx120x", extra = "rocm" },
]
rocm-sdk-core = [
    { index = "therock-gfx120x", extra = "rocm" },
]
rocm-sdk-libraries-gfx120x-all = [
    { index = "therock-gfx120x", extra = "rocm" },
]

[tool.pytest.ini_options]
pythonpath = ["."]
[[tool.uv.index]]
name = "therock-gfx120x"
url = "https://rocm.nightlies.amd.com/v2/gfx120X-all/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
