[tool.poetry]
name = "space-deck-builder"
version = "0.1.0"
description = "A simulator for a space-based deck building card game."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
uv = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"